--- a/Home.html
+++ b/Home.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 	<script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.js" defer></script>
 	<link href="./Home.css" rel="stylesheet"/>
-	<script defer src=" Home.js"></script>
+	<script defer src="./home.js"></script>
 	<link rel="icon" href="./logo-images/favicon.ico">
 </head>
 <body>
