added order bin page

--- a/Home.html
+++ b/Home.html
@@ -1133,6 +1133,81 @@
 				</table>
 			</div>
 		</section>
+			
+		<section id= 'Order_Bin' class=" flex flex-col w-[87%] fixed h-[90%] bg-gray-50 ml-[13%] mt-[5%] gap-12 overflow-x-auto pt-8 items-center" >
+			<h1 class="text-[#009743] text-xl font-semibold text-center">Purchase a WRAP bin</h1>
+			<div class="flex gap-8 flex-wrap">
+				<div class="h-[450px] w-80 rounded-2xl shadow-xl ">
+					<img class="ml-6 mt-6" src="./logo-images/Graph-icon-dashboard.svg"/>
+					<div class="flex items-center justify-center flex-col gap-4">
+						<img  class="h-28 w-28" src="./logo-images/Trash-green.svg"/>
+						<h1 class="text-black text-xl font-semibold">Bio-waste Bin</h1>
+						<p class="px-14 text-gray-500 text-sm text-center">The Green-colored dustbins are meant for wet and biodegradable wastes.</p>
+						<div class="custom-number-input h-10 w-32">
+							<div class="flex flex-row h-10 w-full rounded-lg relative bg-transparent mt-1">
+								<button data-action="decrement" class=" bg-gray-100 hover:text-gray-700 hover:bg-gray-400 h-full w-20 rounded-l cursor-pointer outline-none">
+									<span class="m-auto text-2xl font-thin">−</span>
+								</button>
+								<input type="number" class=" focus:outline-none text-center w-full bg-gray-100 font-semibold text-md hover:text-black focus:text-black flex items-center text-gray-700  outline-none" name="custom-input-number" value="0"></input>
+								<button data-action="increment" class="bg-gray-100 hover:text-gray-700 hover:bg-gray-400 h-full w-20 rounded-r cursor-pointer">
+									<span class="m-auto text-2xl font-thin">+</span>
+								</button>
+							</div>
+						  </div>
+						<h1 class="text-[#009743] text-3xl font-semibold text-center">₹999.00</h1>
+					</div>
+				</div>
+				<div class="h-[450px] w-80 rounded-2xl shadow-xl ">
+					<img class="ml-6 mt-6" src="./logo-images/Graph-icon-dashboard.svg"/>
+					<div class="flex items-center justify-center flex-col gap-4">
+						<img class="h-28 w-28" src="./logo-images/Trash-blue.svg"/>
+						<h1 class="text-black text-xl font-semibold">Plastic Bin</h1>
+						<p class="px-14 text-gray-500 text-sm text-center">Blue dustbins are meant for disposal of plastic & non-biodegradable wastes.</p>
+						<div class="custom-number-input h-10 w-32">
+							<div class="flex flex-row h-10 w-full rounded-lg relative bg-transparent mt-1">
+								<button data-action="decrement" class=" bg-gray-100 hover:text-gray-700 hover:bg-gray-400 h-full w-20 rounded-l cursor-pointer outline-none">
+									<span class="m-auto text-2xl font-thin">−</span>
+								</button>
+								<input type="number" class=" focus:outline-none text-center w-full bg-gray-100 font-semibold text-md hover:text-black focus:text-black flex items-center text-gray-700  outline-none" name="custom-input-number" value="0"></input>
+								<button data-action="increment" class="bg-gray-100 hover:text-gray-700 hover:bg-gray-400 h-full w-20 rounded-r cursor-pointer">
+									<span class="m-auto text-2xl font-thin">+</span>
+								</button>
+							</div>
+						  </div>
+						<h1 class="text-[#009743] text-3xl font-semibold text-center">₹999.00</h1>
+					</div>
+				</div>
+				<div class="h-[450px] w-80 rounded-2xl shadow-xl ">
+					<img class="ml-6 mt-6" src="./logo-images/Graph-icon-dashboard.svg"/>
+					<div class="flex items-center justify-center flex-col gap-4">
+						<img class="h-28 w-28" src="./logo-images/Trash-orange.svg"/>
+						<h1 class="text-black text-xl font-semibold">Paper/Glass Bin</h1>
+						<p class="px-14 text-gray-500 text-sm text-center">Yellow dustbins are meant for papers and glass wastes around us.</p>
+						<div class="custom-number-input h-10 w-32">
+							<div class="flex flex-row h-10 w-full rounded-lg relative bg-transparent mt-1">
+								<button data-action="decrement" class=" bg-gray-100 hover:text-gray-700 hover:bg-gray-400 h-full w-20 rounded-l cursor-pointer outline-none">
+									<span class="m-auto text-2xl font-thin">−</span>
+								</button>
+								<input type="number" class=" focus:outline-none text-center w-full bg-gray-100 font-semibold text-md hover:text-black focus:text-black flex items-center text-gray-700  outline-none" name="custom-input-number" value="0"></input>
+								<button data-action="increment" class="bg-gray-100 hover:text-gray-700 hover:bg-gray-400 h-full w-20 rounded-r cursor-pointer">
+									<span class="m-auto text-2xl font-thin">+</span>
+								</button>
+							</div>
+						</div>
+						<h1 class="text-[#009743] text-3xl font-semibold text-center">₹999.00</h1>
+					</div>
+				</div>
+			</div>
+			<div class="flex justify-center items-center">	
+				<a href="#Dashboard">
+					<button class="w-48 h-12 rounded-lg border border-[#009743] text-[#009743] mr-4">Go Back</button>
+				</a>
+				<a href="#OrderbinSuccess">
+					<button class="w-48 h-12 rounded-lg bg-[#009743] text-white">Place Order</button>
+				</a>
+			</div>
+
+		</section>
 	</div>
 </body>
 </html>
