added schedule success page

--- a/Home.html
+++ b/Home.html
@@ -1208,6 +1208,22 @@
 			</div>
 
 		</section>
+	
+		<section id= 'ScheduleSuccess' class="flex flex-col w-[87%] fixed h-[90%] bg-gray-50 ml-[13%] mt-[5%] gap-4 overflow-x-auto justify-center" >
+			<div class="flex justify-center items-center mt-4">
+				<img class="w-[550px]" src="logo-images/Schedule-Success.svg"/>
+			</div>
+			<div>
+				<h1 class="text-center text-4xl font-semibold p-2 leading-none">Pickup Scheduled Successfully</h1>
+				<h1 class="text-center text-lg font-lg p-2 leading-none">An associate will get in touch with you soon.</h1>
+			</div>
+			<div class="flex justify-center">
+				<a href="#Dashboard">
+					<button class="w-48 h-12 rounded-lg bg-[#009743] text-white">Go back</button>
+				</a>
+			</div>
+		</section>
+
 	</div>
 </body>
 </html>
