Added Dropoff Success page

--- a/Home.html
+++ b/Home.html
@@ -1223,6 +1223,25 @@
 				</a>
 			</div>
 		</section>
+	
+		<section id= 'DropoffSuccess' class="flex flex-col w-[87%] fixed h-[90%] bg-gray-50 ml-[13%] mt-[5%] gap-4 overflow-x-auto justify-center" >
+			<div class="flex justify-center items-center mt-0">	
+				<img class="h-[300px]" src="logo-images/Drop-off-success.svg"/>
+			</div>
+			<div>
+				<h1 class="text-center text-4xl font-semibold p-2 leading-none">Drop Off Scheduled Successfully</h1>
+				<h1 class="text-center text-lg font-lg p-2 leading-none">You can drop off at your nearest collection center during working hours.</h1>
+			</div>
+			<div class="flex justify-center">
+				<a href="#Dashboard">
+					<button class="w-48 h-12 rounded-lg bg-[#009743] text-white">Go back</button>
+				</a>
+			</div>
+		</section>
+	
+	
+	
+	
 
 	</div>
 </body>
