Added Order in Success page

--- a/Home.html
+++ b/Home.html
@@ -1239,6 +1239,21 @@
 			</div>
 		</section>
 	
+		<section id= 'OrderbinSuccess' class="flex flex-col w-[87%] fixed h-[90%] bg-gray-50 ml-[13%] mt-[5%] gap-4 overflow-x-auto justify-center" >
+			<div class="flex justify-center items-center mt-0">	
+				<img class="w-[450px]" src="logo-images/OrderBin-Success.svg"/>
+			</div>
+			<div>
+				<h1 class="text-center text-4xl font-semibold p-2 leading-none">Order Placed Successfully</h1>
+				<h1 class="text-center text-lg font-lg p-2 leading-none">Your request is processed. WRAP bins will be delivered to you soon.</h1>
+			</div>
+			<div class="flex justify-center">
+				<a href="#Dashboard">
+					<button class="w-48 h-12 rounded-lg bg-[#009743] text-white">Go back</button>
+				</a>
+			</div>
+		</section>
+	
 	
 	
 	
