--- a/Home.html
+++ b/Home.html
@@ -9,6 +9,7 @@
 	<script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.js" defer></script>
 	<link href="./Home.css" rel="stylesheet"/>
 	<script src="./home.js" type="text/javascript"></script>
+	<script defer src="calender1.js"></script>
 	<link rel="icon" href="./logo-images/favicon.ico">
 </head>
 <body>
