--- a/Home.html
+++ b/Home.html
@@ -86,10 +86,10 @@
 			</div>
 		</div>
 		<a class="flex gap-3 mt-0 mr-12"  href="#Profile">
-			<img class="rounded-[50%] h-12 w-12 " src="./logo-images/ajay_profile.jpg"/>
+			<img class="rounded-[50%] h-12 w-12 " src="./logo-images/sumit.jpg"/>
 			<div class="flex flex-col ">
-				<h1 class="font-medium">Ajay Vishnu</h1>
-				<p class="text-sm">@ajayvishnue</p>
+				<h1 class="font-medium">Sumit Kakde</h1>
+				<p class="text-sm">@sumit</p>
 			</div>
 		</a>
 	</div>
@@ -654,7 +654,7 @@
 				<div class="flex gap-4">
 					<div class="bg-white w-[550px] h-52 rounded-3xl shadow-lg">
 						<div class="flex h-1/2 w-[550px] items-center gap-0">
-							<img class="rounded-[50%] h-16 w-16 ml-6" src="./logo-images/ajay_profile.jpg" alt="profile pic"/>
+							<img class="rounded-[50%] h-16 w-16 ml-6" src="./logo-images/sumit.jpg" alt="profile pic"/>
 							<h1 class="font-xl text-xl ml-2">Update Picture</h1>
 							<button class="py-2 px-3 m-auto bg-[#009743] rounded-lg text-white ml-14">Upload</button>
 							<a href=""><h1 class="text-[#009743] font-semibold mr-14">Remove</h1></a>
@@ -738,10 +738,10 @@
 				<div class="flex flex-col px-12 py-8 max-w-[800px] bg-white rounded-3xl shadow-lg">
 					<div class="flex w-full gap-40">
 						<div class="flex">
-							<img class= "rounded-[50%] h-36 w-36" src="./logo-images/ajay_profile.jpg"/>
+							<img class= "rounded-[50%] h-36 w-36" src="./logo-images/sumit.jpg"/>
 							<div class="h-24 w-48 ml-4 flex flex-col">
-								<h1 class="text-xl mt-10 font-semibold">Ajay Vishnu E</h1>
-								<P class="text-md font-md">@ajayvishnue</P>
+								<h1 class="text-xl mt-10 font-semibold">Sumti Kakde</h1>
+								<P class="text-md font-md">@sumit</P>
 							</div>
 						</div>
 						<div class="flex gap-4 mt-12 ml-12">
@@ -753,7 +753,7 @@
 					<h1 class=" my-2 text-lg font-semibold text-[#FFCB0A]">About Me</h1>
 					<P class=" mr-20 w-full">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est nemo nulla et impedit enim rerum pariatur aliquid incidunt! Commodi ad suscipit vero eveniet neque ab illo esse optio quidem. Similique.</P>
 					<div class="flex  gap-32 mt-3">
-						<h1 class="text-[#009743] font-semibold">Email : ajayvishnu121@gmail.com</h1>
+						<h1 class="text-[#009743] font-semibold">Email : kakdesumit6@gmail.com</h1>
 						<h1 class="text-[#009743] font-semibold mr-0">Mobile : +91 79077 34688</h1>
 					</div>
 				</div>
